@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="js/pathfinding.js"></script>
 		<script type="text/javascript" src="js/levels/level1.js"></script>
 		<script type="text/javascript" src="js/font.js"></script>
+		<script type="text/javascript" src="js/object_draw.js"></script>
 		<script type="text/javascript" src="js/shell.js"></script>
 	</head>
 	<body>
